--- a/yolov5/requirements.txt
+++ b/yolov5/requirements.txt
@@ -6,7 +6,7 @@ gitpython>=3.1.30
 matplotlib>=3.3
 numpy>=1.23.5
 #opencv-python>=4.1.1
-pillow>=10.3.0
+#pillow>=10.3.0
 psutil  # system resources
 PyYAML>=5.3.1
 requests>=2.32.0
@@ -15,7 +15,7 @@ thop>=0.1.1  # FLOPs computation
 #torch>=1.8.0  # see https://pytorch.org/get-started/locally (recommended)
 #torchvision>=0.9.0
 tqdm>=4.64.0
-ultralytics>=8.2.34  # https://ultralytics.com
+#ultralytics>=8.2.34  # https://ultralytics.com
 # protobuf<=3.20.1  # https://github.com/ultralytics/yolov5/issues/8012
 
 # Logging ---------------------------------------------------------------------
